[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "wmsan"
version = "2024.0.5"
authors = [
  { name="Lisa Tomasetto", email="lisa.tomasetto@gmail.com" },
]
description = "Compute seismic sources of ambient noise using wave model hindcast outputs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy<2.0", 
                "pandas",
                "scipy",
                "h5py",
                "xarray",
                "dask",
                "matplotlib",
                "pyproj",
                "tqdm",
                "netcdf4",
                "cartopy",
                "obspy",
                "ipykernel",
                "notebook",
                "datetime"]

[project.urls]
Homepage = "https://gricad-gitlab.univ-grenoble-alpes.fr/tomasetl/ww3-source-maps/"
Issues = "https://gricad-gitlab.univ-grenoble-alpes.fr/tomasetl/ww3-source-maps/-/issues"
Documentation = "https://tomasetl.gricad-pages.univ-grenoble-alpes.fr/ww3-source-maps/"
